# irobot_quad

./: irobot_dynamics.py  p_xdot.xml  p_ydot.xml  pi3_main_vf.cu  sim_dynamics.py  theta.xml  traj_x.xml  traj_y.xml
pi3_irobot_pkg/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
pi3_irobot_pkg/msg/: rl_vel.msg
pi3_irobot_pkg/scripts/: transfer_node.py
pi3_irobot_pkg/src/: controller_node.cpp  pi3_main_vf.cu  pi3_main_vf.cu~  simulator_node.cpp
